--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint **/*.ts **/*.tsx",
-    "prettier-format": "prettier --config .prettierrc.js ***/**/*.ts ***/**/*.tsx --write"
+    "prettier-format": "prettier --config .prettierrc.js ***/**/*.ts ***/**/*.tsx --write",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -19,14 +20,19 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "babel-jest": "^28.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "typescript": "4.6.3"
   }
 }
