--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.0.0",
     "react-redux": "^8.0.1",
     "redux-toolkit": "^1.1.2",
+    "sharp": "^0.30.6",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
