--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,5 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: docker build -t diary-frontend-docker .
-    - run: docker rm -f $(docker ps -a | grep diary-docker-frontend | cut -c1-10)
+    - run: docker rm -f $(docker ps -a | grep diary-frontend-docker | cut -c1-10)
     - run: docker run -d -p 3000:3000 diary-frontend-docker
