--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,4 @@ jobs:
     - run: npm test
     - run: docker build -t diary-frontend-docker .
     - run: docker rm -f $(docker ps -a | grep diary-frontend-docker | cut -c1-10)
-    - run: docker run -d -p 3000:3000 diary-frontend-docker
+    - run: docker run -d -p 3000:3000 --name diary-frontend-docker diary-frontend-docker
