--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node.js CI
 
 on:
@@ -15,7 +12,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -24,8 +20,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm test
-    - run: docker build -t diary-frontend-docker .
-    - run: docker rm -f $(docker ps -a | grep diary-frontend-docker | cut -c1-10)
-    - run: docker run -d -p 3000:3000 --name diary-frontend-docker diary-frontend-docker
+    - name: install dependencies
+      run: npm ci
+    - name: test the code
+      run: npm test
+    - name: build the new image
+      run: docker build -t diary-frontend-docker .
+    - name: remove the previous container 
+      run: docker rm -f $(docker ps -a | grep diary-frontend-docker | cut -c1-10)
+    - name: run the new container
+      run: docker run -d -p 3000:3000 --name diary-frontend-docker diary-frontend-docker
