--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "plugins": [[
         "babel-plugin-styled-components",
         {
-          "ssr": false
+          "ssr": true
         }]
       ]
 }
