--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.6.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-intersection-observer": "^9.3.3",
     "react-redux": "^8.0.1",
     "redux-toolkit": "^1.1.2",
     "sharp": "^0.30.6",
