--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "intersection-observer": "^0.12.2",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "typescript": "4.6.3"
