--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "js-file-download": "^0.4.12",
     "next": "12.1.5",
     "prettier": "^2.6.2",
     "react": "18.0.0",
