--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint **/*.ts **/*.tsx",
     "prettier-format": "prettier --config .prettierrc.js ***/**/*.ts ***/**/*.tsx --write",
-    "test": "jest"
+    "test": "jest",
+    "check-circular": "dpdm ./pages/index.tsx"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
@@ -33,11 +34,12 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "babel-jest": "^28.1.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "dpdm": "^3.10.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "intersection-observer": "^0.12.2",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "typescript": "4.6.3"
   }
 }
