--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.5",
     "prettier": "^2.6.2",
     "react": "18.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.0.0",
     "react-intersection-observer": "^9.3.3",
     "react-redux": "^8.0.1",
@@ -29,6 +30,7 @@
     "@testing-library/react": "^13.3.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.2",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
